[project]
name = "meta-scaler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "openenv>=0.1.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "openenv-core[core]>=0.2.2",
    "requests>=2.28.0",
]

[project.scripts]
server = "server.app:main"